--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.11.RELEASE</version>
+        <version>2.1.13.RELEASE</version>
     </parent>
-    <!--更新maven 阿里云仓库镜像地址-->
+    <!--更新maven 阿里云仓库镜像地址
     <repositories>
         <repository>
             <id>spring</id>
@@ -49,7 +49,7 @@
                 <enabled>true</enabled>
             </snapshots>
         </pluginRepository>
-    </pluginRepositories>
+    </pluginRepositories>-->
 
     <dependencies>
         <dependency>
